# openisr

./: .gitignore  CHANGES  Makefile  Makefile.am  Makefile.dkms  Makefile.modules  README  README.server  acinclude.m4  autogen.sh  autokernel.mk  configure.ac  kernel.mk  mkrevision.mk  mkrevision.sh  openisr.spec  subst.mk
autoconf/: ac_check_curl.m4  check_ssl.m4  check_zlib.m4
client/: .gitignore  CODA.pm  HTTPSSH.pm  Isr.pm  Isr.pm.in  IsrConfigTie.pm  Isruser.pm  Makefile  Makefile.am  README  isr  isr.1  isr.1.in  isr.in  isr_setup  vulpes_stop
conf/: .gitignore  Makefile  Makefile.am  config  magic  openisr-client.completion.in  openisr-client.init.in  openisr-client.pm-utils  openisr-client.rules.in  openisr-config.8.in  openisr-config.in  openisr.completion.in  openisr.init  openisr.init.in  openisr.modprobe  openisr.rules  openisr.rules.in
convergent/: .gitignore  Makefile  chardev.c  chunkdata.c  compression.c  conflict.c  convergent-user.h  convergent.c  convergent.h  init.c  kcompat.h  lzf.c  lzf.h  lzfP.h  request.c  submitter.c  sysfs.c  test.c  transform.c  workqueue.c
crypto/: .gitignore  Makefile.am  README.secure  aes.c  aes_tab.c  aes_tab.h  blowfish.c  blowfish_tab.h  burn_stack.c  cbc.c  cbc_decrypt.c  cbc_done.c  cbc_encrypt.c  cbc_getiv.c  cbc_setiv.c  cbc_start.c  cipher.c  cipher.h  compress.c  der.c  dh.c  dh_tab.h  ecb.c  gmp.c  hash.c  hmac.c  internal.h  isrcrypto.h  lzf-stream.c  lzf.c  mac.c  md5-compress.c  md5.c  pad.c  random.c  rsa-key.asn1  rsa.c  rsa.h  sha1-compress-amd64.S  sha1-compress-ia32.S  (+7 more)
crypto/rsa/: der.c  gmp.c  gmp_desc.c  pkcs1.c  rsa.c  tomcrypt_math.h  tomcrypt_pk.h  tomcrypt_pkcs.h
crypto/test/: .gitignore  Makefile.am  compress.c  run_vectors.c  sign.c  vectors.h  vectors_aes.h  vectors_blowfish.h  vectors_compress.h  vectors_md5.h  vectors_rsa.h  vectors_sha1.h
debian/: README.Debian  changelog  control  control.template  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  openisr-config.patch  openisr-default.ex  openisr-modules-source.ctl  openisr.doc-base.EX  openisr.postinst  openisr.postrm  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
dm-convergent/: .gitignore  Makefile  convergent.c
kernel/: .gitignore  Makefile.am  common.mk  wrapper.mk
kernel/nexus/: Files.mk  GNUmakefile.am  HACKING  Makefile  chardev.c  chunkdata.c  defs.h  init.c  kcompat.h  lzf.c  lzf.h  nexus.h  request.c  sysfs.c  thread.c  transform.c
kernel/sha1/: GNUmakefile.am  Makefile  sha1-i586-asm.S  sha1-x86_64-asm.S  sha1.c
kernel/sha1/test/: .gitignore  hextostream.c
lev1-tools/: mklev1  mklev1.py  processchunk.c
libutil/: Makefile.am  chunk.c  isrutil.h
libvdisk/: .gitignore  Makefile  Makefile.am  libvdisk.c  test.c
libvdisk/tests/: .gitignore  Makefile
locksrv/: .gitignore  Makefile.am  README  Server.pm  VERSION  isr_admin  isr_admin.in  isr_nsrv_getconfig.pl  isr_nsrv_listparcels.pl  isr_nsrv_motd.pl  isr_runserv  isr_runserv.in  isr_shell.c  isr_srv_catlog.pl  isr_srv_checkparcel.pl  isr_srv_commit.pl  isr_srv_expand.pl  isr_srv_getconfig.pl  isr_srv_listparcels.pl  isr_srv_lock.pl  isr_srv_ls.pl  isr_srv_motd.pl  isr_srv_resetcache.pl  isr_srv_rollback.pl  isr_srv_stat.pl  srv_catlog.pm  srv_checkparcel.pm  srv_commit.pm  srv_getconfig.pm  srv_lock.pm  srv_ls.pm  srv_motd.pm  srv_rollback.pm  srv_stat.pm
nexus/: .gitignore  Files.mk  GNUmakefile.am  HACKING  Makefile  chardev.c  chunkdata.c  convergent-user.h  convergent.h  defs.h  init.c  kcompat.h  lzf.c  lzf.h  nexus.h  readstats.c  request.c  sysfs.c  test.c  thread.c  transform.c
nexus/tools/: .gitignore  Makefile.am  mask.c  readstats.c  test.c
parcelkeeper/: .gitignore  Makefile.am  cache.c  cache_modes.c  cmdline.c  defs.h  fuse.c  fuse_defs.h  fuse_image.c  fuse_stats.c  hoard.c  hoard_modes.c  log.c  main.c  nexus.c  parcelcfg.c  sql.c  transport.c  util.c
redhat/: dkms.conf  dkms.patch  libvdisk-lba_capacity_2.patch  openisr-config  openisr-config.patch  openisr.spec
server/: .gitignore  Makefile.am  main.c  splice.h
sha1/: .gitignore  GNUmakefile.am  Makefile  sha1-i586-asm.S  sha1-x86_64-asm.S  sha1.c
sha1-i386/: .gitignore  Makefile  asm.m4  config.m4  sha.h  sha1-compress.asm  sha1-i386-asm.S  sha1.c  sha1test.c
sha1-i386/test/: Makefile  monte.c
sha1-i586/: Makefile  sha1-i586-asm.S  sha1.c
sha1-i586/test/: monte.c  sha1test.c
sha1-x86_64/: Makefile  sha1-i586-asm.S  sha1-x86_64-asm.S  sha1.c
sha1-x86_64/test/: sha1test.c
sha1/test/: .gitignore  run-vectors.sh  sha1test.c
sqlite/: Makefile.am  README  sql.h  sqlite3.c  wrapper.c
tools/: .gitignore  Makefile.am  blobtool.c  convert-chunks.c  convert-keyring.c  dirtometer.c  dirtometer.in  disktool.c  mklev1.py  modbuild.pm  nextest.c  nexus_debug.c  openisr-config.8.in  openisr-config.in  post.in  query.c  readstats.c  set_device_owner  set_device_owner.in  upgrade-0.9.pl  upgrade-0.9.pl.in  viewer.in  zlib.c
tools/old/: convert-chunks.c  upgrade-0.9.pl.in
transition/: isr_setup
transition/client/: VERSION
vmm/: .gitignore  Makefile.am  kvm.in  none.in  shell.in  virtualbox.in  vmm.pm  vmm.py  vmware.in
vmm/libvdisk/: Makefile.am  libvdisk.c
vmm/libvdisk/tests/: Makefile  probe.c  stat.c
vmm/xpcom/: Makefile.am
vulpes/: .gitignore  Makefile  Makefile.am  Makefile.driver26  README  analyze_logstats.cpp  cache.c  crypto.c  crypto.h  curl-7.12.1.tar.bz2  driver.c  fauxide.c  fauxide.h  isr.c  log.c  log.h  lookaside.c  lookaside.h  main.c  mkrevision.sh  state.h  tf.c  transport.c  util.c  util.h  vulpes.c  vulpes.h  vulpes_cache.c  vulpes_crypto.c  vulpes_crypto.h  vulpes_driver.c  vulpes_fauxide.c  vulpes_fids.c  vulpes_fids.h  vulpes_lev1.c  vulpes_lev1.h  vulpes_lev1_encryption.c  vulpes_lev1_encryption.h  vulpes_lka.C  vulpes_lka.c  (+14 more)
vulpes/#cvs.locks/CVS/: Repository
vulpes/CVS/: Entries  Repository
vulpes/lev1-tools/: kmg.c
vulpes/lev1-tools/#cvs.locks/CVS/: Repository  Root
vulpes/lev1-tools/CVS/: Entries  Repository
